[project]
name = "sample-flask-memo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Haruki Ise", email = "hise@umn.co.jp" }
]
dependencies = [
    "flask>=3.0.3",
    "psycopg[binary,pool]>=3.2.1",
    "uuid6>=2024.1.12",
    "sqlalchemy>=2.0.31",
    "sqlalchemy-utils>=0.41.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sample_flask_memo"]
